# tclcurl-fa

./: .travis.yml  ChangeLog.txt  Changes.txt  Makefile.in  README.md  ReadMe.txt  ReadMeW32.txt  checkAutoPath.tcl  configure  configure.in  license.terms  pkgIndex.tcl.in
.github/workflows/: c-cpp.yml  linux-ci.yml  mac-ci.yml  windows-ci.yml
doc/: aolserver.txt  tclcurl.html  tclcurl.n  tclcurl_multi.html  tclcurl_multi.n  tclcurl_share.html  tclcurl_share.n
generic/: multi.c  multi.h  tclcurl.c  tclcurl.h  tclcurl.tcl
tclconfig/: tcl.m4
tests/: all.tcl  basic.tcl  bodyVar.tcl  bufferSize.tcl  command.tcl  cookie.tcl  cookieFile.tcl  curlConfig.tcl  debugProc.tcl  dict.tcl  dupHandle.tcl  encoding.tcl  errorBuffer.tcl  escape.tcl  escape.test  failOnError.tcl  file.tcl  fileNoFile.tcl  formGet.tcl  ftp.tcl  ftpList.tcl  ftpUpload.tcl  ftpWildcard.tcl  getInfo.tcl  headNoHead.tcl  header.tcl  headerVar.tcl  http200Aliases.tcl  httpBufferPost.tcl  httpHeader.tcl  httpPost.tcl  httpVersion.tcl  https.tcl  interface.tcl  ipresolve.tcl  netrcfile.tcl  noProgress.tcl  nobody.tcl  ntlm.tcl  pop3.tcl  (+25 more)
tests/multi/: auto.tcl  autoGUI.tcl  cancelTrans.tcl  double.tcl  single.tcl
win/: makefile.vc
